--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.11
   - numpy
   - pandas
-  - sklearn
+  - scikit-learn
   - json
   - gzip
   - warnings
@@ -17,4 +17,3 @@ dependencies:
   - tkscrolledframe
   - threading
   - requests
-  - 
