--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-name: example-environment
 channels:
   - conda-forge
 dependencies:
@@ -8,6 +7,7 @@ dependencies:
   - scikit-learn
   - json
   - gzip
+  - pip
   - warnings
   - re
   - urllib
